docs/sf-export/sfdx-raw/objects/Five9_Connector_Disposition__mdt/Five9_Connector_Disposition__mdt.object-meta.xml
<CustomObject>
    <label>Five9 Connector Disposition</label>
    <pluralLabel>Five9 Connector Dispositions</pluralLabel>
</CustomObject>