docs/sf-export/sfdx-raw/objects/Five9_Connector_Disposition__mdt/fields/Create_Task__c.field-meta.xml
<CustomField>
    <fullName>Create_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Task</label>
    <type>Checkbox</type>
</CustomField>