docs/sf-export/sfdx-raw/objects/Five9_Connector_Disposition__mdt/fields/Is_Lead_Marketing_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Is_Lead_Marketing_Qualified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Lead Marketing Qualified</label>
    <type>Checkbox</type>
</CustomField>