docs/sf-export/sfdx-raw/objects/Five9_Connector_Disposition__mdt/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Working Lead</fullName>
            </value>
            <value>
                <fullName>Archive Disposition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>