docs/sf-export/sfdx-raw/objects/Five9_Connector_Disposition__mdt/fields/Sub_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Sub_Disposition__c</fullName>
    <label>Sub Disposition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>