docs/sf-export/sfdx-raw/objects/Five9_Connector_Disposition__mdt/listViews/ALL_2.listView-meta.xml
<ListView>
    <fullName>ALL_2</fullName>
    <columns>MasterLabel</columns>
    <columns>NamespacePrefix</columns>
    <columns>DeveloperName</columns>
    <columns>Stage__c</columns>
    <columns>Sub_Disposition__c</columns>
    <columns>Create_Task__c</columns>
    <columns>Is_Lead_Marketing_Qualified__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL 2</label>
</ListView>